--- a/sources/styles/my-styles.css
+++ b/sources/styles/my-styles.css
@@ -71,6 +71,37 @@ footer {
     margin-inline: 1em;
 }
 
+.call-anim {
+    animation: call-anim 3s linear 0s 10 alternate none;
+}
+
+@keyframes call-anim {
+	0%,
+	100% {
+		transform: translateX(0%);
+		transform-origin: 50% 50%;
+	}
+
+	15% {
+		transform: translateX(-30px) rotate(-6deg);
+	}
+
+	30% {
+		transform: translateX(15px) rotate(6deg);
+	}
+
+	45% {
+		transform: translateX(-15px) rotate(-3.6deg);
+	}
+
+	60% {
+		transform: translateX(9px) rotate(2.4deg);
+	}
+
+	75% {
+		transform: translateX(-6px) rotate(-1.2deg);
+	}
+}
 
 @media (max-width: 755px) {
     .carousel-indicators {
